# LLM-Extraction-Challenge

./: .gitignore  README.md  pyproject.toml
benchmarking/: cost.py  evaluation.py  models.py
fundraising-emails/: charts.py  claude35_haiku_november_2024_prompt2.json  claude35haiku_november_2024.json  claude35haiku_november_2024_prompt2.json  claude35sonnet_november_2024_prompt2.json  claude37_sonnet_november_2024_prompt2.json  cogito_14b_november_2024_prompt2.json  cogito_32b_november_2024_prompt2.json  cogito_70b_november_2024_prompt2.json  combined_matrix.csv  command_a_november_2024_prompt2.json  command_r7b_november_2024_prompt2.json  deepseek_r1_32b_november_2024.json  deepseek_r1_32b_november_2024_prompt2.json  deepseek_r1_8b_november_2024.json  email_ollama.py  exaone35_32b_november_2024_prompt2.json  exaone35_november_2024.json  exaone_deep_32b_november_2024_prompt2.json  gemini20_flash_november_2024_prompt2.json  gemini25_flash_preview_04_17_november_2024_prompt2.json  gemini_25_november_2024_prompt2.json  gemma2_27b_november_2024_prompt2.json  gemma2_november_2024.json  gemma2_november_2024_prompt2.json  gemma3_12b_november_2024_prompt2.json  gemma3_27b_it_qat_november_2024_prompt2.json  gemma3_27b_november_2024_prompt2.json  generate_leaderboard.py  gpt-4o-mini_november_2024.json  gpt-4o_november_2024_prompt2.json  gpt_41_mini_november_2024_prompt2.json  gpt_41_nano_november_2024_prompt2.json  granite3.2_november_2024_prompt2.json  granite3.3_november_2024_prompt2.json  granite31_dense_8b_november_2024_prompt2.json  hermes3_70b_november_2024_prompt2.json  (+45 more)
(+149 files in other folders)
